<resources>
    <string name="app_name">unilocal-prueba</string>

    <!-- Textos del layout main -->
    <string name="txt_busqueda">Nombre del lugar</string>
    <string name="txt_btn_login">Ir a login</string>
    <string name="txt_btn_nuevo_lugar">Nuevo lugar</string>

    <!-- Textos del layout login -->
    <string name="txt_email">Escriba su correo</string>
    <string name="txt_password">Escriba su contraseña</string>
    <string name="txt_btn_inicio_sesion">Iniciar Sesión</string>
    <string name="txt_btn_registrarse">Registrarse</string>

    <!-- Textos del layout registro -->
    <string name="txt_nombre">Escriba su nombre</string>
    <string name="txt_nickname">Escriba su nickname</string>

    <!-- Textos del layout crear lugar -->
    <string name="txt_nombre_lugar">Nombre del lugar</string>
    <string name="txt_descripcion_lugar">Descripción del lugar</string>
    <string name="txt_direccion_lugar">Dirección del lugar</string>
    <string name="txt_telefono_lugar">Teléfono del lugar</string>
    <string name="txt_btn_crear_lugar">Crear nuevo lugar</string>

    <!-- Textos de validaciones -->
    <string name="es_obligatorio">Este campo es obligatorio</string>
    <string name="maximo_caracteres">Máximo 10 caractéres</string>
    <string name="usuario_creado">Usuario registrado exitosamente</string>
    <string name="datos_correctos">Los datos son correctos</string>
    <string name="datos_incorrectos">Los datos son incorrectos</string>

</resources>