<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!-- Lo que está comentado hace referencia a las clases 8 y 9 de los PDFs y videos-->

    <!--
    <TextView
        android:id="@+id/texto_inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    -->

    <!-- Aquí se supone que va el mapa de google -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DFDFDF" />

    <EditText
        android:id="@+id/txt_busqueda"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/txt_busqueda"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:gravity="center"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_busqueda"
        android:drawableRight="@drawable/ic_search"/>

    <Button
        android:id="@+id/btn_crear_lugar"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/txt_btn_nuevo_lugar"
        android:layout_above="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:onClick="irACrearLugar"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/txt_btn_login"
        app:icon="@drawable/ic_done_android"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="40dp"
        android:onClick="irALogin"/>

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="Ir a crear lugar"
        android:onClick="irACrearLugar"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="Cambiar Texto"
        android:onClick="cambiarTexto"/>
    -->

</RelativeLayout>